Перевод крафты и фиксы

--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -211,7 +211,7 @@
   "item.jigsaw_pp.pizdoor": "Pizdoor",
   "item.jigsaw_pp.ponos_cutlass": "Ponos cutlass",
   "item.jigsaw_pp.pricel_rapier": "Pricel rapier",
-  "item.jigsaw_pp.road_sign": "Road sing",
+  "item.jigsaw_pp.road_sign": "Road sign",
   "item.jigsaw_pp.shishkin": "Sir John Phallustiff",
   "item.jigsaw_pp.shit_stick": "Shit stick",
   "item.jigsaw_pp.skewer": "Skewer",
