--- a/src/main/resources/assets/jigsaw_pp/lang/ru_ru.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/ru_ru.json
@@ -2,8 +2,8 @@
   "item.jigsaw_pp.elephant_pickaxe": "Слоновый камнетёс",
   "item.jigsaw_pp.elephant_pickaxe.desc": "§6Чем горячее тем быстрее",
 
-  "item_group.jigsaw_pp.jigsaw_tab": "Цыганство II",
-  "item_group.jigsaw_pp.jigsaw_tab_materials": "Цыганство II: Материалы",
+  "item_group.jigsaw_pp.jigsaw_tab": "Цыгащина II",
+  "item_group.jigsaw_pp.jigsaw_tab_materials": "Цыгащина II: Материалы",
 
   "item.jigsaw_pp.moss_elephant_pickaxe": "§aОбросший слоновый камнетёс",
   "item.jigsaw_pp.moss_elephant_pickaxe.desc": "§2Дает жизнь",
@@ -52,13 +52,17 @@
   "item.jigsaw_pp.purgen_gun": "П.У.Р.Г.Е.Н. - пушка",
   "block.jigsaw_pp.purgen_factory": "Завод пургена",
   "block.jigsaw_pp.factory_heater": "Нагреватель завода",
-  "item.jigsaw_pp.purgen_bundle": "Мешок для пургена",
+  "item.jigsaw_pp.purgen_bundle": "Мешочек для пургена",
   "item.jigsaw_pp.purgen_machine_gun": "П.У.Р.Г.Е.Н. - миниган",
-  "item.jigsaw_pp.basic_purgen_pilule": "Базовая таблетка с пургеном",
-  "item.jigsaw_pp.nuclear_purgen_pilule": "Ядерная таблетка с пургеном",
-  "item.jigsaw_pp.advanced_purgen_pilule": "Улучшенная таблетка с пургеном",
-  "item.jigsaw_pp.crystal_purgen_pilule": "Кристально чистая таблетка с пургеном",
+  "item.jigsaw_pp.basic_purgen_pilule": "Базовая пилюля с пургеном",
+  "item.jigsaw_pp.nuclear_purgen_pilule": "Ядерная пилюля с пургеном",
+  "item.jigsaw_pp.advanced_purgen_pilule": "Улучшенная пилюля с пургеном",
+  "item.jigsaw_pp.crystal_purgen_pilule": "Кристально чистая пилюля с пургеном",
   "item.jigsaw_pp.empty_pilule": "Пилюля",
+
+  "subtitles.beaver_zombie_ambient": "Боброзомби шатается",
+  "subtitles.beaver_zombie_hurts": "Боброзомби блюет",
+  "subtitles.beaver_zombie_die": "Боброзомби издает истошный рёв",
 
   "item.jigsaw_pp.blabbit_spawn_egg": "Яйцо призыва §dПузайца",
   "item.jigsaw_pp.prh_tnt": "Шанс взрыва",
@@ -76,6 +80,11 @@
   "item.jigsaw_pp.moss_elephant_thumb": "Икона мшистого слона",
   "item.jigsaw_pp.moss_elephant_thumb.desc": "§7Дайте предмет §aМшистому слону§7 для результата",
 
+  "item.jigsaw_pp.zombie_beaver_spawn_egg": "Яйцо призыва боброзомби",
+  "item.jigsaw_pp.zombie_beaver_spawner_spawn_egg": "Яйцо призыва призывника боброзомби",
+
+  "item.jigsaw_pp.beaver_spider_spawn_egg": "Яйцо призыва бобропаука",
+
   "item.jigsaw_pp.hazmat_helmet": "Шлем химзащиты",
   "item.jigsaw_pp.hazmat_chestplate": "Нагрудник химзащиты",
   "item.jigsaw_pp.hazmat_leggings": "Штаны химзащиты",
@@ -85,11 +94,12 @@
 
   "item.jigsaw_pp.slave_helmet": "Гачи маска",
   "item.jigsaw_pp.slave_chestplate": "Гачи портупея",
-  "item.jigsaw_pp.slave_leggings": "Гачи трусы",
+  "item.jigsaw_pp.slave_leggings": "Гачи труселя",
   "item.jigsaw_pp.slave_boots": "Гачи тапки",
 
   "effect.jigsaw_pp.poop": "Экран в говне",
   "effect.jigsaw_pp.purgative": "Сильное слабительное",
+  "effect.jigsaw_pp.radiation": "Облучение",
 
   "item.jigsaw_pp.pilule.duration" : "§7§oДлительность эффекта: ",
   "misc.jigsaw_pp.second": "§7сек",
@@ -103,15 +113,145 @@
   "subtitles.factory_heater": "Факторный нагреватель шпарит",
   "recipe.jigsaw_pp.purgen_catalyst": "Катализатор пургенового синтеза",
   "recipe.jigsaw_pp.purgen_factory": "Пургеновый завод",
-
-  "item.jigsaw_pp.slon_gun":  "Слон пистолет",
+  "item.jigsaw_pp.slon_gun":  "Слоновый пистолетик",
+  "item.jigsaw_pp.slon_gun_green":  "Зеленый слоновый пистолетик",
 
   "jigsaw_pp.tooltip.liquid.amount": "%s mB",
   "jigsaw_pp.tooltip.liquid.amount.with.capacity": "%s / %s mB",
- 
-  "item.jigsaw_pp.zombie_beaver_spawn_egg": "Яйцо призыва боброзомби",
-  "item.jigsaw_pp.zombie_beaver_spawner_spawn_egg": "Яйцо призыва коробки с боброзомби",
+  "jigsaw_pp.tooltip.liquid.mb": " mB",
+  
 
-  "item.jigsaw_pp.beaver_spider_spawn_egg": "Яйцо призыва бобропаука",
-  "jigsaw_pp.tooltip.liquid.mb": " mB"
+  "jigsaw_pp.divider_of_localisation_version": "ALL THAT ADDED AFTER THIS IS NOT RU-LOCALISED UNTIL RELEASE! PLEASE DO NOT ADD LOCALES ABOVE THIS LINE. ONLY UNDER",
+
+
+  "item.jigsaw_pp.blabball.desc": "§7Кастрируйте связанного и избитого §dПузайца",
+  "item.jigsaw_pp.blabball": "Пуяйко",
+  "block.jigsaw_pp.blabegg": "Пуяйца",
+
+  "item.jigsaw_pp.useless_pie.desc": "§7Каждый из нас - беспонтовый пирожок",
+  "item.jigsaw_pp.useless_pie": "Беспонтовый пирожок",
+  "block.jigsaw_pp.yoba": "Ехидный колобок",
+  "block.jigsaw_pp.yoba_poop": "Злобный ехидный колобок",
+  "block.jigsaw_pp.pooped_bricks": "Обосранные кирпичи",
+  "block.jigsaw_pp.lenin_bust": "Бюст ленина",
+  "block.jigsaw_pp.mold_block": "Блок плесени",
+  "item.jigsaw_pp.mold": "Плесень",
+  "block.jigsaw_pp.beaver_computer": "Боброхост",
+  "effect.jigsaw.beaver_so_deffect": "Коричневый экран смерти",
+  "item.jigsaw_pp.beaver_knife": "Боброножик",
+  "item.jigsaw_pp.beaver_axe": "Бобровый топоришко",
+  "item.jigsaw_pp.pigkaxe": "Свинокоп",
+  "item.jigsaw_pp.pigkaxe.desc": "§7Ударьте свинью §6громоотводом",
+  "item.jigsaw_pp.tube_19": "Пробирка №19",
+  "subtitles.clown_horn": "Клоунские звуки",
+  "item.jigsaw_pp.eggs": "Яйца",
+  "effect.jigsaw_pp.egged": "Яичная магия",
+  "item.jigsaw_pp.totem_of_shit": "Тотем говна",
+
+  "subtitles.beaver_spider_chop": "Бобропаук приближается",
+  "subtitles.beaver_spider_ambient": "Бобер паук рядом",
+
+  "painting.jigsaw_pp.avebread.title": "Аве хлебъ",
+  "painting.jigsaw_pp.balls.title": "Яйца",
+  "painting.jigsaw_pp.beavernazi.title": "Бобростан",
+  "painting.jigsaw_pp.blabbit.title": "Пузаяц",
+  "painting.jigsaw_pp.ded.title": "Дедушочек",
+  "painting.jigsaw_pp.dedsad.title": "Детский садик",
+  "painting.jigsaw_pp.dristpunk2.title": "Dristpunk 3",
+  "painting.jigsaw_pp.pag.title": "Падж",
+  "painting.jigsaw_pp.potsight.title": "Горшкоприцел",
+  "painting.jigsaw_pp.pug.title": "Пудж",
+  "painting.jigsaw_pp.slonik.title": "Зеленый слоник",
+  "painting.jigsaw_pp.svyatostrun.title": "Святострун",
+  "painting.jigsaw_pp.avebread.author": "Beaver",
+  "painting.jigsaw_pp.balls.author": "Beaver",
+  "painting.jigsaw_pp.beavernazi.author": "Beaver",
+  "painting.jigsaw_pp.blabbit.author": "Beaver",
+  "painting.jigsaw_pp.ded.author": "Beaver",
+  "painting.jigsaw_pp.dedsad.author": "Beaver",
+  "painting.jigsaw_pp.dristpunk2.author": "Beaver",
+  "painting.jigsaw_pp.pag.author": "Beaver",
+  "painting.jigsaw_pp.potsight.author": "Beaver",
+  "painting.jigsaw_pp.pug.author": "Beaver",
+  "painting.jigsaw_pp.slonik.author": "Beaver",
+  "painting.jigsaw_pp.svyatostrun.author": "Beaver",
+
+  "item.jigsaw_pp.jotaro_hat": "Кепарик Джотаро Токийского",
+  "item.jigsaw_pp.pooped_bread": "Хлеб с повидлом",
+  "item.jigsaw_pp.beaver_helmet": "Бобровая маска",
+  "item.jigsaw_pp.beaver_chestplate": "Бобровый костюмчик",
+  "item.jigsaw_pp.beaver_boots": "Бобровые тапки",
+  "item.jigsaw_pp.beaver_bomb": "Бобробомба",
+  "item.jigsaw_pp.beaverzooka": "Боброзука",
+  "item.jigsaw_pp.beaver_ammo": "Бобровый снаряд",
+  "item.jigsaw_pp.beaverzooka.desc": "§7Требует Бобровый снаряд",
+  "item.jigsaw_pp.shit_cup": "Великий Кубок Говна",
+  "item.jigsaw_pp.admin_stick": "Admin ♂anal♂ stick",
+  "block.jigsaw_pp.pw_hat": "Цилиндр PWGood-а",
+  "item.jigsaw_pp.tree_launcher": "Древострел",
+  "block.jigsaw_pp.lenin_bust.desc": "§7Следует опасаться §eпчел",
+  "block.jigsaw_pp.purgen_factory.desc": "§7Следует установить на §6Нагреватель завода",
+  "block.jigsaw_pp.purgen_factory.desc_two": "§7наполните жидкостью при помощи ведра",
+  "item.jigsaw_pp.batch_size_card.desc": "§7Увеличивает размер порции §6Пургена",
+  "block.jigsaw_pp.factory_heater.desc": "§7Следует установить на §6Горячие блоки",
+
+  "item.jigsaw_pp.diamond_iron_ingot": "Слиток алмазного железа",
+  "block.jigsaw_pp.diamond_iron_block": "Блок алмазного железа",
+  "item.jigsaw_pp.arm": "Бобровая культяпка",
+  "item.jigsaw_pp.beaver_staff": "Посох бобра",
+  "item.jigsaw_pp.beaver_staff_honey": "Медовый посох бобра",
+  "item.jigsaw_pp.brown_cutlass": "Сабля коричневой бороды",
+  "item.jigsaw_pp.cross": "Крест Горшочнул в трусы",
+  "item.jigsaw_pp.ladle": "Поварёшка",
+  "item.jigsaw_pp.empty_bottle": "Пустой пузырь",
+  "item.jigsaw_pp.rose_bottle": "Розочка",
+  "item.jigsaw_pp.ershik": "Ёршик",
+  "item.jigsaw_pp.paddle": "Весло",
+  "item.jigsaw_pp.pirate_cutlass": "Сабля",
+  "item.jigsaw_pp.pizdoor": "Пиздверь",
+  "item.jigsaw_pp.ponos_cutlass": "Сабля коричневого сердца",
+  "item.jigsaw_pp.pricel_rapier": "Сабля(рапира) прицела",
+  "item.jigsaw_pp.road_sign": "Знак 'Осторожно, бобры!'",
+  "item.jigsaw_pp.shishkin": "Встанислав Шишкин",
+  "item.jigsaw_pp.shit_stick": "Говно на палочке",
+  "item.jigsaw_pp.skewer": "Шампур",
+  "item.jigsaw_pp.pomato": "Пометофель",
+  "item.jigsaw_pp.half_heart_of_the_sea": "Располовиненное сердце моря",
+  "item.jigsaw_pp.dellist": "Лист на удаление из джигсава",
+  "item.jigsaw_pp.beaweed_checker": "Надсмотрщик боброжмыха",
+  "block.jigsaw_pp.bottle_o_pricel": "Прицел бутылка",
+
+  "item.jigsaw_pp.plunger": "Вантуз",
+  "block.jigsaw_pp.drist_tnt": "Дриставый динамит",
+  "item.jigsaw_pp.drist_tnt_stick": "Шашка дриставого динамита",
+  "entity.jigsaw_pp.jetstream_chair": "Реактивный стул",
+  "item.jigsaw_pp.jetstream_chair": "Реактивный стул",
+  "entity.jigsaw_pp.moss_elephant": "Слон из мха",
+
+  "block.jigsaw_pp.plate_bread": "Тарелка сладкого хлеба",
+  "block.jigsaw_pp.plate_empty": "Пустая тарелка",
+  "entity.jigsaw_pp.stone_beaver": "Каменный бобрик",
+  "item.jigsaw_pp.stone_beaver_spawn_egg": "§rЯйцо призыва §6Каменного бобрика",
+
+  "item.jigsaw_pp.friendship_fan": "Вентилятор дружбы",
+
+  "fluid_type.jigsaw_pp.ponos": "Понос",
+  "fluid_type.jigsaw_pp.fat": "Жир",
+  "item.jigsaw_pp.fat_bucket": "Ведро жира",
+  "block.jigsaw_pp.fat_block": "Блок жира",
+  "block.jigsaw_pp.pork_block": "Блок свинины",
+  "item.jigsaw_pp.hot_fat": "Горячий жир",
+  "item.jigsaw_pp.tallow": "Сало",
+  "item.jigsaw_pp.poops": "Пупс",
+  "entity.jigsaw_pp.poops": "Пупс",
+  "item.jigsaw_pp.poopis": "Пупис",
+  "entity.jigsaw_pp.poopis": "Пупис",
+  "item.jigsaw_pp.straps": "Погоны",
+  "block.jigsaw_pp.pig_tuffyak": "Свиной тюфяк",
+
+
+  "jigsaw_pp.divider_of_localisation_version_2": "ALL THAT ADDED AFTER THIS IS NOT RU-LOCALISED UNTIL RELEASE! PLEASE DO NOT ADD LOCALES ABOVE THIS LINE. ONLY UNDER"
+
+
+
 }
