--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -247,6 +247,7 @@
   "item.jigsaw_pp.poopis": "Poopis",
   "entity.jigsaw_pp.poopis": "Poopis",
   "item.jigsaw_pp.straps": "Colonel straps",
-  "block.jigsaw_pp.pig_tuffyak": "Pig Tuffyak"
+  "block.jigsaw_pp.pig_tuffyak": "Pig Tuffyak",
+  "item.jigsaw_pp.beaver_staff.desc": "§7Can be used to incite §6Stone Beavers"
 
 }
