--- a/src/main/resources/assets/jigsaw_pp/lang/ru_ru.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/ru_ru.json
@@ -248,6 +248,7 @@
   "entity.jigsaw_pp.poopis": "Пупис",
   "item.jigsaw_pp.straps": "Погоны",
   "block.jigsaw_pp.pig_tuffyak": "Свиной тюфяк",
+  "item.jigsaw_pp.beaver_staff.desc": "§7Позволяет подстрекать §6Каменных Бобриков",
 
 
   "jigsaw_pp.divider_of_localisation_version_2": "ALL THAT ADDED AFTER THIS IS NOT RU-LOCALISED UNTIL RELEASE! PLEASE DO NOT ADD LOCALES ABOVE THIS LINE. ONLY UNDER"
