stone as block added

--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -248,6 +248,7 @@
   "entity.jigsaw_pp.poopis": "Poopis",
   "item.jigsaw_pp.straps": "Colonel straps",
   "block.jigsaw_pp.pig_tuffyak": "Pig Tuffyak",
-  "item.jigsaw_pp.beaver_staff.desc": "§7Can be used to incite §6Stone Beavers"
+  "item.jigsaw_pp.beaver_staff.desc": "§7Can be used to incite §6Stone Beavers",
+  "block.jigsaw_pp.psycho_stone": "Psycho stone"
 
 }
