--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -141,6 +141,7 @@
   "effect.jigsaw.beaver_so_deffect": "Brown screen of Death",
   "item.jigsaw_pp.beaver_knife": "Beaver knife",
   "item.jigsaw_pp.beaver_axe": "Beaver axe",
+  "item.jigsaw_pp.sapper_shovel": "Sapper shovel",
   "item.jigsaw_pp.pigkaxe": "Pigkaxe",
   "item.jigsaw_pp.pigkaxe.desc": "§7Hit pig with §6lightning rod",
   "item.jigsaw_pp.tube_19": "Tube №19",
