--- a/src/main/resources/assets/jigsaw_pp/lang/ru_ru.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/ru_ru.json
@@ -2,8 +2,8 @@
   "item.jigsaw_pp.elephant_pickaxe": "Слоновый камнетёс",
   "item.jigsaw_pp.elephant_pickaxe.desc": "§6Чем горячее тем быстрее",
 
-  "item_group.jigsaw_pp.jigsaw_tab": "Цыгащина II",
-  "item_group.jigsaw_pp.jigsaw_tab_materials": "Цыгащина II: Материалы",
+  "item_group.jigsaw_pp.jigsaw_tab": "Цыганщина II",
+  "item_group.jigsaw_pp.jigsaw_tab_materials": "Цыганщина II: Материалы",
 
   "item.jigsaw_pp.moss_elephant_pickaxe": "§aОбросший слоновый камнетёс",
   "item.jigsaw_pp.moss_elephant_pickaxe.desc": "§2Дает жизнь",
@@ -163,18 +163,6 @@
   "painting.jigsaw_pp.pug.title": "Пудж",
   "painting.jigsaw_pp.slonik.title": "Зеленый слоник",
   "painting.jigsaw_pp.svyatostrun.title": "Святострун",
-  "painting.jigsaw_pp.avebread.author": "Beaver",
-  "painting.jigsaw_pp.balls.author": "Beaver",
-  "painting.jigsaw_pp.beavernazi.author": "Beaver",
-  "painting.jigsaw_pp.blabbit.author": "Beaver",
-  "painting.jigsaw_pp.ded.author": "Beaver",
-  "painting.jigsaw_pp.dedsad.author": "Beaver",
-  "painting.jigsaw_pp.dristpunk2.author": "Beaver",
-  "painting.jigsaw_pp.pag.author": "Beaver",
-  "painting.jigsaw_pp.potsight.author": "Beaver",
-  "painting.jigsaw_pp.pug.author": "Beaver",
-  "painting.jigsaw_pp.slonik.author": "Beaver",
-  "painting.jigsaw_pp.svyatostrun.author": "Beaver",
 
   "item.jigsaw_pp.jotaro_hat": "Кепарик Джотаро Токийского",
   "item.jigsaw_pp.pooped_bread": "Хлеб с повидлом",
@@ -189,7 +177,7 @@
   "item.jigsaw_pp.admin_stick": "Admin ♂anal♂ stick",
   "block.jigsaw_pp.pw_hat": "Цилиндр PWGood-а",
   "item.jigsaw_pp.tree_launcher": "Древострел",
-  "block.jigsaw_pp.lenin_bust.desc": "§7Следует опасаться §eпчел",
+  "block.jigsaw_pp.lenin_bust.desc": "§7При использовании в качестве пасеки разлагается на §eплесень",
   "block.jigsaw_pp.purgen_factory.desc": "§7Следует установить на §6Нагреватель завода",
   "block.jigsaw_pp.purgen_factory.desc_two": "§7наполните жидкостью при помощи ведра",
   "item.jigsaw_pp.batch_size_card.desc": "§7Увеличивает размер порции §6Пургена",
