--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -301,5 +301,12 @@
   "item.minecraft.tipped_arrow.effect.unlevitation_potion": "Unlevitation arrow",
   "item.minecraft.potion.effect.unlevitation_potion": "Unlevitation potion",
   "item.minecraft.splash_potion.effect.unlevitation_potion": "Splash unlevitation potion",
-  "item.minecraft.lingering_potion.effect.unlevitation_potion": "Lingering unlevitation potion"
+  "item.minecraft.lingering_potion.effect.unlevitation_potion": "Lingering unlevitation potion",
+
+  "block.jigsaw_pp.creative_heat_source.desc": "§7Infinity heat source for purgen factory",
+  "block.jigsaw_pp.creative_heat_source": "Creative heat source",
+  "item.jigsaw_pp.pilule.god_visibility": "§7Creative visibility applied",
+  "item.jigsaw_pp.pilule.doctor_visibility": "§7Doctor's view applied",
+  "item.jigsaw_pp.doctor_helmet": "Dr. Govnarius' outfit",
+  "item.jigsaw_pp.doctor_helmet.desc": "§7Allows to inspect hidden purgen effects"
 }
