--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -242,10 +242,10 @@
   "block.jigsaw_pp.pork_block": "Pork block",
   "item.jigsaw_pp.hot_fat": "Hot fat",
   "item.jigsaw_pp.tallow": "Tallow",
-  "item.jigsaw_pp.poops": "Poops",
-  "entity.jigsaw_pp.poops": "Poops",
-  "item.jigsaw_pp.poopis": "Poopis",
-  "entity.jigsaw_pp.poopis": "Poopis",
+  "item.jigsaw_pp.poops": "Homing baby villager",
+  "entity.jigsaw_pp.poops": "Homing baby villager",
+  "item.jigsaw_pp.poopis": "Homing baby shitlager",
+  "entity.jigsaw_pp.poopis": "Homing baby shitlager",
   "item.jigsaw_pp.straps": "Colonel straps",
   "block.jigsaw_pp.pig_tuffyak": "Pig Tuffyak",
   "item.jigsaw_pp.beaver_staff.desc": "§7Can be used to incite §6Stone Beavers",
