--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -340,5 +340,11 @@
   "item.minecraft.lingering_potion.effect.poop_walking_potion": "Lingering poop walking potion",
 
   "enchantment.jigsaw_pp.purgen_armor_piercing": "Purgen Piercing",
-  "enchantment.jigsaw_pp.purgen_armor_piercing.desc": "§7Allows pilule to bypass hazmat"
+  "enchantment.jigsaw_pp.purgen_armor_piercing.desc": "§7Allows pilule to bypass hazmat",
+
+  "effect.jigsaw_pp.meteorism": "Flatulence",
+  "item.minecraft.tipped_arrow.effect.meteorism_potion": "Flatulence arrow",
+  "item.minecraft.potion.effect.poop_meteorism_potion": "Flatulence potion",
+  "item.minecraft.splash_potion.effect.meteorism_potion": "Splash flatulence potion",
+  "item.minecraft.lingering_potion.effect.meteorism_potion": "Lingering flatulence potion"
 }
