--- a/src/main/resources/assets/jigsaw_pp/lang/en_us.json
+++ b/src/main/resources/assets/jigsaw_pp/lang/en_us.json
@@ -346,7 +346,7 @@
   "item.jigsaw_pp.fried_soup": "Fried soup",
   "item.jigsaw_pp.fried_soup.desc": "§7Provokes your intestines, it will get §aGassy",
   "block.jigsaw_pp.poonami": "Poonami bucket",
-  "item.jigsaw_pp.poonami.desc": "§7Insanely dangerous, §4WILL DESTROY YOUR WORLD"
+  "item.jigsaw_pp.poonami.desc": "§7Insanely dangerous, §4WILL DESTROY YOUR WORLD",
   "enchantment.jigsaw_pp.purgen_armor_piercing": "Purgen Piercing",
-  "enchantment.jigsaw_pp.purgen_armor_piercing.desc": "§7Allows pilule to bypass hazmat
+  "enchantment.jigsaw_pp.purgen_armor_piercing.desc": "§7Allows pilule to bypass hazmat"
 }
